--- a/demo.html
+++ b/demo.html
@@ -42,11 +42,13 @@
 		}
 		div:hover
 		{
-			transform:rotate(300deg);
+			transform: scale(1.1);
+
 		}
 	</style>
 </head>
-<body>
+<body><br/>
+	<br/>
 	<center>
 	<div>
 <form>
